--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
     "nodemon": "^3.1.7",
@@ -23,12 +25,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@socket.io/redis-streams-adapter": "^0.2.2",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "prisma": "^5.22.0",
     "socket.io": "^4.8.1",
