--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -35,6 +36,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "prisma": "^5.22.0",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0"
