--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fabric": "^6.6.2",
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.5",
     "react": "^18.3.1",
