--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/ws": "^8.18.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -39,6 +40,9 @@
     "nodemailer": "^6.10.0",
     "prisma": "^5.22.0",
     "socket.io": "^4.8.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.1",
+    "y-websocket": "^1.3.12",
+    "yjs": "^13.6.24"
   }
 }
