--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,8 @@
     "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.24",
     "zod": "^3.24.2"
   },
   "devDependencies": {
