--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fabric": "^6.6.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.5",
     "react": "^18.3.1",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
