--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/socket.io-client": "^1.4.36",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fabric": "^6.6.2",
@@ -29,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
